@@ -10,12 +10,13 @@ import preponderous.ponder.minecraft.abs.AbstractPluginCommand;
 import preponderous.ponder.minecraft.spigot.tools.UUIDChecker;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class TopCommand extends AbstractPluginCommand {
 
     public TopCommand() {
-        super(new ArrayList<>(List.of("top")), new ArrayList<>(List.of("ss.top")));
+        super(new ArrayList<>(Arrays.asList("top")), new ArrayList<>(Arrays.asList("ss.top")));
     }
 
     @Override
